--- a/INN_Learner_Notebook_Full_code.ipynb
+++ b/INN_Learner_Notebook_Full_code.ipynb
@@ -153,8 +153,8 @@
    "metadata": {
     "id": "oyTYkHrRc0kz",
     "ExecuteTime": {
-     "end_time": "2024-07-31T04:01:53.874433Z",
-     "start_time": "2024-07-31T04:01:51.907354Z"
+     "end_time": "2024-08-02T22:11:43.308557Z",
+     "start_time": "2024-08-02T22:11:43.176268Z"
     }
    },
    "outputs": [],
@@ -175,8 +175,8 @@
    "metadata": {
     "id": "xGZLJmZUdkPq",
     "ExecuteTime": {
-     "end_time": "2024-07-31T04:02:53.911037Z",
-     "start_time": "2024-07-31T04:02:53.894125Z"
+     "end_time": "2024-08-02T22:11:50.833886Z",
+     "start_time": "2024-08-02T22:11:50.820460Z"
     }
    },
    "outputs": [],
@@ -197,8 +197,8 @@
    "metadata": {
     "id": "4sPbCEoLuQBk",
     "ExecuteTime": {
-     "end_time": "2024-07-31T04:03:14.949091Z",
-     "start_time": "2024-07-31T04:03:14.945040Z"
+     "end_time": "2024-08-02T22:11:52.355940Z",
+     "start_time": "2024-08-02T22:11:52.352261Z"
     }
    },
    "outputs": [
@@ -218,8 +218,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T04:03:33.741840Z",
-     "start_time": "2024-07-31T04:03:33.734285Z"
+     "end_time": "2024-08-02T22:11:53.422672Z",
+     "start_time": "2024-08-02T22:11:53.417639Z"
     }
    },
    "cell_type": "code",
@@ -390,8 +390,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T04:03:50.183601Z",
-     "start_time": "2024-07-31T04:03:50.174799Z"
+     "end_time": "2024-08-02T22:11:56.853468Z",
+     "start_time": "2024-08-02T22:11:56.844514Z"
     }
    },
    "cell_type": "code",
@@ -435,8 +435,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T04:06:31.697267Z",
-     "start_time": "2024-07-31T04:06:31.689858Z"
+     "end_time": "2024-08-02T22:12:01.228919Z",
+     "start_time": "2024-08-02T22:12:01.222123Z"
     }
    },
    "cell_type": "code",
@@ -466,8 +466,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T04:07:01.757497Z",
-     "start_time": "2024-07-31T04:07:01.746983Z"
+     "end_time": "2024-08-02T22:12:03.004179Z",
+     "start_time": "2024-08-02T22:12:02.994544Z"
     }
    },
    "cell_type": "code",
@@ -506,8 +506,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T04:07:22.807947Z",
-     "start_time": "2024-07-31T04:07:22.793850Z"
+     "end_time": "2024-08-02T22:12:06.859390Z",
+     "start_time": "2024-08-02T22:12:06.845410Z"
     }
    },
    "cell_type": "code",
@@ -711,8 +711,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-31T04:09:37.599223Z",
-     "start_time": "2024-07-31T04:09:37.589060Z"
+     "end_time": "2024-08-02T22:12:18.325140Z",
+     "start_time": "2024-08-02T22:12:18.312386Z"
     }
    },
    "cell_type": "code",
@@ -864,7 +864,7 @@
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -935,18 +935,21 @@
    "metadata": {
     "id": "g1Lxry70ibDw",
     "ExecuteTime": {
-     "end_time": "2024-07-31T04:15:19.921817Z",
-     "start_time": "2024-07-31T04:15:19.917255Z"
+     "end_time": "2024-08-02T22:13:09.178921Z",
+     "start_time": "2024-08-02T22:13:09.174832Z"
     }
    },
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 10
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-02T22:13:09.848084Z",
+     "start_time": "2024-08-02T22:13:09.844321Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# function to create labeled barplots\n",
     "\n",
@@ -998,13 +1001,18 @@
     "        )  # annotate the percentage\n",
     "\n",
     "    plt.show()  # show the plot"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 11
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-02T22:13:10.389880Z",
+     "start_time": "2024-08-02T22:13:10.386890Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# function to plot stacked bar chart\n",
     "\n",
@@ -1033,13 +1041,18 @@
     "    )\n",
     "    plt.legend(loc=\"upper left\", bbox_to_anchor=(1, 1))\n",
     "    plt.show()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 12
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-02T22:13:10.916701Z",
+     "start_time": "2024-08-02T22:13:10.913188Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "### Function to plot distributions\n",
     "\n",
@@ -1083,7 +1096,16 @@
     "\n",
     "    plt.tight_layout()\n",
     "    plt.show()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 13
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": ""
   },
   {
    "cell_type": "markdown",
@@ -1110,6 +1132,35 @@
    },
    "source": [
     "## Data Preprocessing"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# importing SMOTE\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "\n",
+    "# importing metrics\n",
+    "from sklearn.metrics import confusion_matrix,roc_curve,classification_report,recall_score\n",
+    "\n",
+    "import random"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# importing different functions to build models\n",
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "from keras import backend\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Dropout"
    ]
   },
   {
